<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="in.ev.badchar.ui.home.detail.BadCharDetailViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/product_detail_cc_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="@dimen/spacing_tiny"
            android:layout_marginStart="@dimen/spacing_tiny"
            android:layout_marginEnd="@dimen/spacing_tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/char_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.8"
                android:layout_marginEnd="@dimen/spacing_tiny"
                android:layout_marginStart="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewModel.imageUrl}"
                app:placeholderData="@{@drawable/placeholder}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/label_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:layout_marginStart="@dimen/spacing_mini"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintStart_toStartOf="@+id/char_image"
                app:layout_constraintTop_toBottomOf="@+id/char_image"/>

            <TextView
                android:id="@+id/char_name"
                style="@style/TextStyleBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_ultra_mini"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:text="@{viewModel.charName}"
                app:layout_constraintStart_toEndOf="@+id/label_name"
                app:layout_constraintTop_toBottomOf="@+id/char_image"
                tools:text="10% off on parcel orders" />

            <TextView
                android:id="@+id/label_occupation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_occupation"
                android:layout_marginTop="@dimen/spacing_extra_tiny"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintStart_toStartOf="@+id/label_name"
                app:layout_constraintTop_toBottomOf="@+id/label_name"/>


            <TextView
                android:id="@+id/char_occupation"
                style="@style/TextStyleBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_extra_tiny"
                android:text="@{viewModel.occupation}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/char_name"
                app:layout_constraintTop_toBottomOf="@+id/char_name"
                tools:text="Min Order 4 Kg" />

            <TextView
                android:id="@+id/label_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_status"
                android:layout_marginTop="@dimen/spacing_extra_tiny"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintStart_toStartOf="@+id/label_name"
                app:layout_constraintTop_toBottomOf="@+id/label_occupation"/>

            <TextView
                android:id="@+id/char_status"
                style="@style/TextStyleBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_extra_tiny"
                android:text="@{viewModel.status}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/char_name"
                app:layout_constraintTop_toBottomOf="@+id/char_occupation"
                tools:text="Min Order 4 Kg" />

            <TextView
                android:id="@+id/label_nick_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_nick_name"
                android:layout_marginTop="@dimen/spacing_extra_tiny"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintStart_toStartOf="@+id/label_name"
                app:layout_constraintTop_toBottomOf="@+id/label_status"/>

            <TextView
                android:id="@+id/char_nick_name"
                style="@style/TextStyleBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_extra_tiny"
                android:text="@{viewModel.nickName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/char_name"
                app:layout_constraintTop_toBottomOf="@+id/char_status"
                tools:text="Min Order 4 Kg" />

            <TextView
                android:id="@+id/label_season"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_season"
                android:layout_marginTop="@dimen/spacing_extra_tiny"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintStart_toStartOf="@+id/label_name"
                app:layout_constraintTop_toBottomOf="@+id/label_nick_name"/>

            <TextView
                android:id="@+id/char_season"
                style="@style/TextStyleBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_extra_tiny"
                android:text="@{viewModel.season}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/char_name"
                app:layout_constraintTop_toBottomOf="@+id/char_nick_name"
                tools:text="Min Order 4 Kg" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>